--- a/src/components/Pokemon/styles.module.scss
+++ b/src/components/Pokemon/styles.module.scss
@@ -20,11 +20,15 @@
     position: relative;
     overflow: hidden;
 
+    &:hover {
+        transform: scale(1.1);
+    }
+
     h3 {
         text-transform: uppercase;
         font-size: 1.2rem;
         width: 45%;
-        text-align: end;
+        text-align: center;
         font-family: 'Sora', sans-serif;
         font-weight: 600;
     }
@@ -45,7 +49,7 @@
         object-fit: contain;
         transform: rotateY(180deg);
         left: 0;
-        z-index: 1;
+        z-index: 2;
         border-radius: 50%;
     }
 
